# disk_reliability

./: .gitignore  Cargo.toml  LICENSE  README.md  chart_tool.py  disk_tester.py  output.txt  plotter.py  requirements-offline.txt  requirements-online.txt
.github/workflows/: ci.yml
legacy_rust/src/: lib.rs  macos_iokit_stats.rs  serial.rs
scripts/: install_offline.ps1  install_online.ps1  prepare_offline_wheels.ps1
src/: auto_tune.rs  backupio.rs  controller_tree.rs  drive_descriptor.rs  full_drive_report.rs  hardware_info.rs  lib.rs  mac_usb_report.rs  macos_direct.rs  macos_iokit_stats.rs  main copy.rs  main.c  main.rs  path_utils.rs  serial.rs  tests.rs
src/drive_info/: windows.rs
src/hardware_info/: bus.rs  mod.rs
tests/: test_disk_tester.py
wheels/: README.txt
